--- a/MonteCarlo/public/css/site.css
+++ b/MonteCarlo/public/css/site.css
@@ -1,11 +1,77 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:italwght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:italwght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 * {
-    font-family: 'Montserrat', sans-serif;
+    font-family: "Montserrat", sans-serif;
 }
 
 body {
     height: 100vh;
     background-image: linear-gradient(#457eac, #c9b2e5);
     background-repeat: no-repeat;
+    background-attachment: fixed;
+}
+
+.btn-reg {
+    background-color: #9c52fa;
+    color: white;
+}
+
+.btn-reg:hover {
+    background-color: #9c52fa;
+    color: white;
+}
+
+.btn-log {
+    background-color: #457eac;
+    color: white;
+}
+
+.btn-log:hover {
+    background-color: #457eac;
+    color: white;
+}
+
+.form-checkbox:focus {
+    outline: none;
+    box-shadow: none;
+}
+
+.form-control {
+    border-top: none;
+    border-right: none;
+    border-left: none;
+    border-bottom: 1px solid grey;
+    border-radius: 0;
+}
+
+.form-control:focus {
+    outline: none;
+    border-color: black;
+    box-shadow: none;
+}
+
+.form-control::placeholder {
+    color: gray;
+}
+
+.form-control:focus {
+    color: black;
+}
+
+.shadow {
+    box-shadow: 0 0 10px lightgray;
+}
+
+.rounded-custom {
+    border-radius: 20px;
+}
+
+input.no-arrow::-webkit-outer-spin-button,
+input.no-arrow::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+input.no-arrow {
+    -moz-appearance: textfield;
 }
