--- a/MonteCarlo/public/css/site.css
+++ b/MonteCarlo/public/css/site.css
@@ -4,7 +4,11 @@
     font-family: "Montserrat", sans-serif;
 }
 
-body {
+.col {
+    background-color: rgb(43, 43, 43);
+}
+
+.bg-grad {
     height: 100vh;
     background-image: linear-gradient(#457eac, #c9b2e5);
     background-repeat: no-repeat;
@@ -90,14 +94,196 @@ input.no-arrow {
 }
 
 .bg-image-1 {
+    background-image: url("../img/DriverBlyskawica.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    min-height: 60vh;
+    width: 100vw;
+    position: relative;
+    color: white;
+    font-weight: bold;
+    text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2);
+}
+
+.color-overlay {
+    position: absolute;
     width: 100%;
-    background-size: 100% 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.2);
+}
+
+.bg-image-2 {
+    background-image: url("../img/peter-mizsak-oAYBm7nuIWY-unsplash.jpg");
+    background-size: cover;
+    width: 100vw;
+    min-height: 60vh;
     background-repeat: no-repeat;
 }
 
+.bg-image-3 {
+    background-image: url("../img/HousePicture.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 100vw;
+    min-height: 60vh;
+    display: relative;
+    color: white;
+    text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2);
+}
+
+.cards-wrapper {
+    display: flex;
+}
+
+.card {
+    margin: 0 2%;
+    background-color: rgba(0, 0, 0, 0.5);
+    text-align: center;
+    width: 60%;
+    height: 350px;
+    color: white;
+}
+
+.card-title {
+    font-weight: bold;
+}
+
+.q-text {
+    margin: 20% 20%;
+    text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2);
+}
+
+.bg-footer {
+    background-color: rgb(43, 43, 43);
+    color: white;
+}
+
+@media (max-width: 576px) {
+    .card {
+        width: 70%;
+    }
+    .bg-image-2,
+    .bg-image-3 {
+        background-position: center;
+    }
+    .q-text {
+        margin: 5% 5%;
+    }
+}
+
 @media (max-width: 768px) {
+    .bg-image-1 {
+        min-height: 40vh;
+    }
+
     .height-nav {
         height: 100vh;
         margin-top: var(--nav-height);
+    }
+
+    .card {
+        height: 400px;
+    }
+}
+
+@media (max-width: 992px) {
+    .bg-image-1 {
+        min-height: 80vh;
+    }
+
+    .card {
+        height: 520px;
+    }
+
+    .bg-image-3 {
+        min-height: 80vh;
+    }
+}
+
+@media (min-width: 992px) {
+    .bg-image-1 {
+        min-height: 80vh;
+    }
+
+    .card {
+        height: 520px;
+    }
+
+    .bg-image-3 {
+        min-height: 80vh;
+    }
+}
+
+@media (max-width: 1200px) {
+    .bg-image-1 {
+        min-height: 40vh;
+    }
+
+    .bg-image-2 {
+        min-height: 40vh;
+    }
+    .card {
+        height: 520px;
+    }
+
+    .bg-image-3 {
+        min-height: 40vh;
+    }
+}
+
+@media (min-width: 1200px) {
+    .bg-image-1 {
+        min-height: 40vh;
+    }
+
+    .bg-image-2 {
+        min-height: 40vh;
+    }
+    .card {
+        height: 580px;
+    }
+
+    .bg-image-3 {
+        min-height: 40vh;
+    }
+}
+
+@media (min-width: 1900px) {
+    .bg-image-1 {
+        width: 80vw;
+        min-height: 80vh;
+        background-position: center;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .bg-image-2 {
+        width: 80vw;
+        min-height: 80vh;
+        background-position: center;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    .card {
+        height: 720px;
+    }
+
+    .bg-image-3 {
+        width: 80vw;
+        min-height: 80vh;
+        background-position: center;
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
+
+@media (min-height: 700px) {
+    .bg-image-1 {
+        min-height: 80vh;
+    }
+    .bg-image-2 {
+    }
+    .bg-image-3 {
+        min-height: 80vh;
     }
 }
