--- a/MonteCarlo/public/css/site.css
+++ b/MonteCarlo/public/css/site.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:italwght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 body {
-    background-color: rgb(43, 43, 43);
+    background-color: lightgray;
     margin: 0;
     padding: 0;
 }
@@ -12,13 +12,15 @@ html {
     padding: 0;
 }
 
-.col {
-    background-color: rgb(43, 43, 43);
-}
-
 .bg-grad {
     min-height: calc(100vh - var(--nav-height));
     height: 100%;
+    background-image: linear-gradient(#457eac, #c9b2e5);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+}
+
+.bg-grad-color {
     background-image: linear-gradient(#457eac, #c9b2e5);
     background-repeat: no-repeat;
     background-attachment: fixed;
@@ -185,6 +187,14 @@ input.no-arrow {
 }
 .about-us-img {
     padding: 0 0;
+    width: 100%;
+}
+
+/* Footer */
+
+.footer {
+    position: relative;
+    bottom: 0;
     width: 100%;
 }
 
