fixed footer again

--- a/MonteCarlo/public/css/site.css
+++ b/MonteCarlo/public/css/site.css
@@ -201,7 +201,7 @@ input.no-arrow {
 /* Cennik tabela */
 
 .table {
-    margin-top: 10%;
+    margin: 10% 0;
     text-align: center;
     background-color: whitesmoke;
     color: black;
