Add edit and delete student

--- a/MonteCarlo/public/css/site.css
+++ b/MonteCarlo/public/css/site.css
@@ -366,3 +366,14 @@ input.no-arrow {
     color: white;
     border-radius: 5px;
 }
+
+/* Show masked password */
+.passwordpole {
+    background-color: transparent;
+    border: 0px;
+    color: white;
+}
+
+.noClick {
+    pointer-events: none;
+}
