--- a/MonteCarlo/public/css/site.css
+++ b/MonteCarlo/public/css/site.css
@@ -278,6 +278,10 @@ input.no-arrow {
         padding: 10% 5%;
         width: 100%;
     }
+
+    .text-recover {
+        font-size: 1.4rem;
+    }
 }
 
 /* X-Large devices (large desktops, 1200px and up) */
@@ -376,4 +380,12 @@ input.no-arrow {
 
 .noClick {
     pointer-events: none;
+}
+
+.link-dark {
+    text-decoration: none;
+}
+
+.link-dark:hover {
+    color: darkgrey !important;
 }
