opinions are now working

--- a/MonteCarlo/public/css/site.css
+++ b/MonteCarlo/public/css/site.css
@@ -391,11 +391,13 @@ input.no-arrow {
 }
 
 .form-control-3 {
-    color: white;
+    color: black;
+    background-color: white;
 }
 
 .form-control-3:focus {
     border-color: black;
     box-shadow: none;
-    color: white;
+    color: black;
+    background-color: white;
 }
