Added view buttons & other fixes

--- a/MonteCarlo/public/css/site.css
+++ b/MonteCarlo/public/css/site.css
@@ -401,3 +401,16 @@ input.no-arrow {
     color: black;
     background-color: white;
 }
+
+.nav-link:hover {
+    border-radius: 10%;
+    background-color: lightgray;
+}
+
+.nav-red {
+    color: lightcoral;
+}
+
+.nav-red:hover {
+    color: red;
+}
