--- a/MonteCarlo/public/css/site.css
+++ b/MonteCarlo/public/css/site.css
@@ -52,6 +52,21 @@ html {
     color: white;
 }
 
+.btn-rev {
+    background-color: #eadc48;
+    color: #ffffff;
+    border: none;
+    padding: 10px 30px;
+    border-radius: 5px;
+    font-size: 16px;
+    cursor: pointer;
+}
+
+.btn-rev:hover {
+    background-color: rgba(255, 255, 255, 1);
+    color: #eadc48;
+}
+
 .form-checkbox:focus {
     outline: none;
     box-shadow: none;
