--- a/MonteCarlo/public/css/site.css
+++ b/MonteCarlo/public/css/site.css
@@ -477,6 +477,11 @@ input.no-arrow {
     color: #c5b358;
 }
 
+.card-bodyO h3 {
+    margin-bottom: 1em;
+    color: #c5b358;
+}
+
 .card-bodyO h4 {
     margin-bottom: 1em;
     color: #c5b358;
